--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,11 +48,11 @@ jobs:
         with:
           name: app-development-debug-androidTest
           
-      - name: Login to Google Cloud
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-        with: 
-          version: '270.0.0' 
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
+#       - name: Login to Google Cloud
+#         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+#         with: 
+#           version: '270.0.0' 
+#           service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
           
 #       - name: Set current project
 #         run: gcloud config set project ${{ secrets.FIREBASE_APP_ID }}
