--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,28 +39,37 @@ jobs:
           path: app/build/outputs/apk/androidTest/development/debug/app-development-debug-androidTest.apk
           
       - uses: actions/checkout@v1
-  
-      - name: Download app APK
-        uses: actions/download-artifact@v1
-        with:
-          name: app-development-debug
-          
-      - name: Download Android test APK
-        uses: actions/download-artifact@v1
-        with:
-          name: app-development-debug-androidTest
-          
-      - name: Login to Google Cloud
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-        with: 
-          version: '270.0.0' 
-          service_account_key: ${{secrets.SERVICE_ACCOUNT}}
-          
-      - name: Set current project
-        run: gcloud config set project ${{secrets.FIREBASE_APP_ID}}
-        
-      - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+  firebase:
+        name: Run UI tests with Firebase Test Lab
+        runs-on: ubuntu-18.04
+        steps:
+        - uses: actions/checkout@v1
+        - name: Set up JDK 11
+          uses: actions/setup-java@v1
+          with:
+            java-version: '11'
+
+        - name: Download app APK
+          uses: actions/download-artifact@v1
+          with:
+            name: app-development-debug
+
+        - name: Download Android test APK
+          uses: actions/download-artifact@v1
+          with:
+            name: app-development-debug-androidTest
+
+        - name: Login to Google Cloud
+          uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+          with: 
+            version: '270.0.0' 
+            service_account_key: ${{secrets.SERVICE_ACCOUNT}}
+
+        - name: Set current project
+          run: gcloud config set project ${{secrets.FIREBASE_APP_ID}}
+
+        - name: Run Instrumentation Tests in Firebase Test Lab
+          run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
 
 #     steps:
 #     - uses: actions/checkout@v2
