--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,17 @@ jobs:
           
       - name: Run Unit tests
         run: bash ./gradlew test --stacktrace
-        
+   
+  apk:
+    name: Generate APK
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+            
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug
         
@@ -40,15 +50,13 @@ jobs:
           
       - uses: actions/checkout@v1
   firebase:
-        name: Run UI tests with Firebase Test Lab
-        runs-on: ubuntu-18.04
-        steps:
-        - uses: actions/checkout@v1
-        - name: Set up JDK 11
-          uses: actions/setup-java@v1
-          with:
-            java-version: '11'
+      name: Run UI tests with Firebase Test Lab
+      needs: apk
+      runs-on: ubuntu-18.04
 
+      steps:
+        - uses: actions/checkout@v1
+        
         - name: Download app APK
           uses: actions/download-artifact@v1
           with:
