--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -77,7 +77,7 @@ jobs:
           run: gcloud config set project ${{secrets.FIREBASE_PROMISES_APP_ID}}
 
         - name: Run Instrumentation Tests in Firebase Test Lab
-          run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+          run: gcloud firebase test android run --type instrumentation --app app-development-debug/app-development-debug.apk --test app-development-debug-androidTest/app-development-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
 
 #     steps:
 #     - uses: actions/checkout@v2
