--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -76,13 +76,13 @@ jobs:
         - name: Set current project
           run: gcloud config set project ${{secrets.FIREBASE_PROMISES_APP_ID}}
           
-        - name: Firebase App Distribution
-          uses: wzieba/Firebase-Distribution-Github-Action@v1
-          with:
-            appId: ${{secrets.FIREBASE_APP_ID}}
-            token: ${{secrets.FIREBASE_TOKEN}}
-            groups: testers
-            file: app-development-debug/app-development-debug.apk
+#         - name: Firebase App Distribution
+#           uses: wzieba/Firebase-Distribution-Github-Action@v1
+#           with:
+#             appId: ${{secrets.FIREBASE_APP_ID}}
+#             token: ${{secrets.FIREBASE_TOKEN}}
+#             groups: testers
+#             file: app-development-debug/app-development-debug.apk
             
         - name: Run Instrumentation Tests in Firebase Test Lab
           run: gcloud firebase test android run --type instrumentation --app app-development-debug/app-development-debug.apk --test app-development-debug-androidTest/app-development-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
