--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,13 +31,13 @@ jobs:
           java-version: '11'
             
       - name: Assemble app debug APK
-        run: bash ./gradlew assembleDebug
+        run: bash ./gradlew assemble
         
       - name: Upload app APK
         uses: actions/upload-artifact@v1
         with:
-          name: app-development-debug
-          path: app/build/outputs/apk/development/debug/app-development-debug.apk
+          name: app-development-release
+          path: app/build/outputs/apk/development/release/app-development-release.apk
           
       - name: Assemble Android Instrumentation Tests
         run: bash ./gradlew assembleAndroidTest
@@ -60,7 +60,7 @@ jobs:
         - name: Download app APK
           uses: actions/download-artifact@v1
           with:
-            name: app-development-debug
+            name: app-development-release
 
         - name: Download Android test APK
           uses: actions/download-artifact@v1
@@ -74,18 +74,18 @@ jobs:
             service_account_key: ${{secrets.SERVICE_ACCOUNT}}
 
         - name: Set current project
-          run: gcloud config set project ${{secrets.FIREBASE_PROMISES_APP_ID}}
+          run: gcloud config set project ${{secrets.FIREBASE_APP_ID}}
           
-#         - name: Firebase App Distribution
-#           uses: wzieba/Firebase-Distribution-Github-Action@v1
-#           with:
-#             appId: ${{secrets.FIREBASE_APP_ID}}
-#             token: ${{secrets.FIREBASE_TOKEN}}
-#             groups: testers
-#             file: app-development-debug/app-development-debug.apk
-            
         - name: Run Instrumentation Tests in Firebase Test Lab
-          run: gcloud firebase test android run --type instrumentation --app app-development-debug/app-development-debug.apk --test app-development-debug-androidTest/app-development-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+          run: gcloud firebase test android run --type instrumentation --app app-development-release/app-development-release.apk --test app-development-debug-androidTest/app-development-debug-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+          
+        - name: Firebase App Distribution
+          uses: wzieba/Firebase-Distribution-Github-Action@v1
+          with:
+            appId: ${{secrets.FIREBASE_APP_ID}}
+            token: ${{secrets.FIREBASE_TOKEN}}
+            groups: testers
+            file: app-development-release/app-development-release.apk            
 #     steps:
 #     - uses: actions/checkout@v2
 #     - name: set up JDK 11
