--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -82,7 +82,7 @@ jobs:
         - name: Firebase App Distribution
           uses: wzieba/Firebase-Distribution-Github-Action@v1
           with:
-            appId: ${{secrets.FIREBASE_PROMISES_APP_ID}}
+            appId: ${{secrets.FIREBASE_APP_ID}}
             token: ${{secrets.FIREBASE_TOKEN}}
             groups: testers
             file: app-development-release/app-development-release.apk            
