--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,7 @@ on:
     branches: [ development ]
 
 jobs:
-  test:
+  unit-test:
     name: Unit Tests
     runs-on: ubuntu-18.04
     steps:
@@ -20,8 +20,9 @@ jobs:
       - name: Run Unit tests
         run: bash ./gradlew test --stacktrace
    
-  apk:
+  apk-build:
     name: Generate APK
+    needs: unit-test
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
@@ -49,9 +50,9 @@ jobs:
           path: app/build/outputs/apk/androidTest/development/release/app-development-release-androidTest.apk
           
       - uses: actions/checkout@v1
-  firebase:
+  firebase-test-lab:
       name: Run UI tests with Firebase Test Lab
-      needs: apk
+      needs: apk-build
       runs-on: ubuntu-18.04
 
       steps:
@@ -78,7 +79,23 @@ jobs:
           
         - name: Run Instrumentation Tests in Firebase Test Lab
           run: gcloud firebase test android run --type instrumentation --app app-development-release/app-development-release.apk --test app-development-release-androidTest/app-development-release-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
-          
+
+        - name: Run Robo Tests in Firebase Test Lab
+          run: gcloud firebase test android run --type Robo --app app-development-release/app-development-release.apk --test app-development-release-androidTest/app-development-release-androidTest.apk --device model=Pixel2,version=28,locale=en,orientation=portrait
+
+  firebase-app-distribution:
+      name: Firebase App Distribution
+      needs: firebase-test-lab
+      runs-on: ubuntu-18.04
+
+      steps:
+        - uses: actions/checkout@v1
+
+        - name: Download app APK
+          uses: actions/download-artifact@v1
+          with:
+            name: app-development-release
+
         - name: Firebase App Distribution
           uses: wzieba/Firebase-Distribution-Github-Action@v1
           with:
@@ -86,23 +103,3 @@ jobs:
             token: ${{secrets.FIREBASE_TOKEN}}
             groups: testers
             file: app-development-release/app-development-release.apk            
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: set up JDK 11
-#       uses: actions/setup-java@v2
-#       with:
-#         java-version: '11'
-#         distribution: 'adopt'
-#         cache: gradle
-        
-#     - name: Unit tests
-#       run: ./gradlew test
-#     - name: Build release 
-#       run: ./gradlew assembleRelease
-#     - name: Run tests on Firebase Test Lab
-#       uses: asadmansr/Firebase-Test-Lab-Action@v1.0
-#       with:
-#           arg-spec: 'tests.yml:android-pixel-4'
-#       env:
-#           SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
-    
