--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.feature_auth_android.FirebaseAuthActivity"
+            android:name="com.example.feature_auth_android.sign_in.firebase.FirebaseAuthActivity"
             android:theme="@style/Theme.Transparent" />
     </application>
 
