--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     implementation project(path: ':domain_impl')
     implementation project(path: ':domain_android')
+    implementation project(path: ':data_impl')
     implementation project(path: ':data_android')
     implementation project(path: ':audit_android')
 
