--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ ext {
             android: "io.insert-koin:koin-android:3.1.2",
             core   : "io.insert-koin:koin-core:3.1.2"
     ]
+    database = [
+            realm   : "io.realm.kotlin:library:0.5.0"
+    ]
     android_sdk = [
             core               : "androidx.core:core-ktx:1.6.0",
             appcompat          : 'androidx.appcompat:appcompat:1.3.1',
