--- a/data_impl/build.gradle
+++ b/data_impl/build.gradle
@@ -5,9 +5,17 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
-dependencies{
-    implementation 'io.realm.kotlin:library:0.5.0'
+dependencies {
+    api project(path: ':data')
+    implementation project(path: ':domain')
+
+    implementation koin.core
+
+    implementation network.retrofit
+    implementation network.retrofit_converter
+
+    implementation database.realm
 }
