--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,10 @@ ext {
     test = [
             junit    : 'junit:junit:4.13.2',
             junit_ext: 'androidx.test.ext:junit:1.1.2',
-            espresso : 'androidx.test.espresso:espresso-core:3.3.0'
+            espresso : 'androidx.test.espresso:espresso-core:3.3.0',
+            mockito : 'org.mockito:mockito-core:3.11.2',
+            robolectric : 'org.robolectric:robolectric:4.4',
+            arch_core : 'android.arch.core:core-testing:1.1.1'
     ]
 
     network = [
