--- a/feature_promise_android/build.gradle
+++ b/feature_promise_android/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     implementation project(path: ':common_android')
 
     testImplementation test.junit
-    testImplementation 'org.mockito:mockito-core:3.11.2'
-    testImplementation 'org.robolectric:robolectric:4.4'
-    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation test.mockito
+    testImplementation test.robolectric
+    testImplementation test.arch_core
 
     androidTestImplementation test.junit_ext
     androidTestImplementation test.espresso
