--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '11'
           
       - name: Run Unit tests
-        run: bash ./gradlew testDevelopmentDebugUnitTest --stacktrace
+        run: bash ./gradlew test --stacktrace
    
   apk-build:
     name: Generate APK
