--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
           java-version: '11'
             
       - name: Assemble app debug APK
-        run: bash ./gradlew assemble
+        run: bash ./gradlew assembleDevelopmentRelease
         
       - name: Upload app APK
         uses: actions/upload-artifact@v1
