--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           java-version: '11'
             
-      - name: Assemble app debug APK
+      - name: Assemble app development Release APK
         run: bash ./gradlew assembleDevelopmentRelease
         
       - name: Upload app APK
@@ -39,7 +39,7 @@ jobs:
           path: app/build/outputs/apk/development/release/app-development-release.apk
           
       - name: Assemble Android Instrumentation Tests
-        run: bash ./gradlew assembleAndroidTest -DtestBuildType=release
+        run: bash ./gradlew assembleDevelopmentReleaseAndroidTest
         
       - name: Upload Android Test APK
         uses: actions/upload-artifact@v1
