--- a/feature_profile/build.gradle
+++ b/feature_profile/build.gradle
@@ -10,4 +10,12 @@ java {
 dependencies {
     implementation project(path: ':mvi')
     implementation project(path: ':domain')
+
+    implementation koin.core
+
+    testImplementation testing.junit
+    testImplementation testing.junit_ext
+    testImplementation testing.espresso
+    testImplementation testing.mockito
+
 }
