--- a/data_android/build.gradle
+++ b/data_android/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     implementation android_sdk.room_ktx
     kapt android_sdk.room_compiler
 
+    implementation "androidx.datastore:datastore:1.0.0"
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+
     implementation platform(firebase.bom)
     implementation firebase.firestore
     implementation firebase.auth
